--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/mrsahugit/openai-developer"
   },
   "version": "0.0.1",
-  "publisher": "mrsahugit",
+  "publisher": "manassahu",
   "engines": {
     "vscode": "^1.76.0"
   },
