--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "openai-developer",
   "displayName": "OpenAI Developer",
-  "description": "Integration with OpenAI models ChatGPT(GPT3.5) and Codex for Developer.",
+  "description": "Integration with OpenAI models ChatGPT(GPT3.5), Codex and Image for Developer.",
   "license": "SEE LICENSE IN LICENSE.md",
   "icon": "resources/media/openai.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/mrsahugit/openai-developer"
   },
-  "version": "0.0.3",
+  "version": "0.0.4",
   "publisher": "manassahu",
   "engines": {
     "vscode": "^1.76.0"
@@ -24,7 +24,8 @@
     "gpt-3",
     "codex",
     "copilot",
-    "ai"
+    "ai",
+    "image"
   ],
   "activationEvents": [],
   "main": "./out/extension.js",
@@ -45,6 +46,10 @@
       {
         "command": "openai-developer.findProblem",
         "title": "OpenAI Developer: Why code is not working"
+      },
+      {
+        "command": "openai-developer.generateImage",
+        "title": "OpenAI Developer: Generate Image"
       }
     ],
     "menus": {
